test/correct/PMC3.hs
module PMC3 where

main :: Bool
main = not2 True

not2 :: Bool -> Bool
not2 True = False
not2 False = True
