test/typeerrors/Examples/ExprLiteral.hs
module ExprLiteral where

f :: Bool
f = 1
